@@ -17,77 +17,146 @@
  */
 package org.greencodeinitiative.creedengo.java.checks;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Deque;
-import java.util.LinkedList;
 import java.util.List;
 
+import javax.annotation.Nonnull;
 import javax.annotation.ParametersAreNonnullByDefault;
 
 import org.sonar.check.Rule;
 import org.sonar.plugins.java.api.IssuableSubscriptionVisitor;
 import org.sonar.plugins.java.api.JavaFileScannerContext;
-import org.sonar.plugins.java.api.JavaVersion;
 import org.sonar.plugins.java.api.tree.NewClassTree;
 import org.sonar.plugins.java.api.tree.Tree;
 import org.sonar.plugins.java.api.tree.TryStatementTree;
 import org.sonarsource.analyzer.commons.annotations.DeprecatedRuleKey;
 
-
+/**
+ * This rule checks that objects implementing AutoCloseable interface are properly managed
+ * using try-with-resources statement instead of try-finally blocks.
+ * <p>
+ * Try-with-resources ensures proper resource management and reduces the risk of resource leaks.
+ * It also reduces boilerplate code and improves code readability.
+ * <p>
+ * From an environmental perspective, proper resource management prevents resource leaks
+ * which can lead to increased memory consumption and unnecessary CPU cycles.
+ *
+ * @see <a href="https://docs.oracle.com/javase/tutorial/essential/exceptions/tryResourceClose.html">Try-with-resources</a>
+ */
 @Rule(key = "GCI79")
 @DeprecatedRuleKey(repositoryKey = "ecocode-java", ruleKey = "EC79")
 @DeprecatedRuleKey(repositoryKey = "greencodeinitiative-java", ruleKey = "S79")
 public class FreeResourcesOfAutoCloseableInterface extends IssuableSubscriptionVisitor {
-    private final Deque<TryStatementTree> withinTry = new LinkedList<>();
-    private final Deque<List<Tree>> toReport = new LinkedList<>();
+
+    /**
+     * Stack to track nested try statements while traversing the AST
+     */
+    private final Deque<TryStatementContext> tryStack = new ArrayDeque<>();
 
     private static final String JAVA_LANG_AUTOCLOSEABLE = "java.lang.AutoCloseable";
-    protected static final String MESSAGE_RULE = "try-with-resources Statement needs to be implemented for any object that implements the AutoClosable interface.";
+    protected static final String MESSAGE_RULE = "try-with-resources Statement needs to be implemented for any object that implements the AutoCloseable interface.";
 
     @Override
     @ParametersAreNonnullByDefault
     public void leaveFile(JavaFileScannerContext context) {
-        withinTry.clear();
-        toReport.clear();
+        tryStack.clear();
     }
 
     @Override
+    @Nonnull
     public List<Tree.Kind> nodesToVisit() {
-        return Arrays.asList(Tree.Kind.TRY_STATEMENT, Tree.Kind.NEW_CLASS);
+        return List.of(Tree.Kind.TRY_STATEMENT, Tree.Kind.NEW_CLASS);
     }
 
     @Override
-    public void visitNode(Tree tree) {
+    public void visitNode(@Nonnull Tree tree) {
         if (tree.is(Tree.Kind.TRY_STATEMENT)) {
-            withinTry.push((TryStatementTree) tree);
-            if (withinTry.size() != toReport.size()) {
-                toReport.push(new ArrayList<>());
-            }
-        }
-        if (tree.is(Tree.Kind.NEW_CLASS) && ((NewClassTree) tree).symbolType().isSubtypeOf(JAVA_LANG_AUTOCLOSEABLE) && withinStandardTryWithFinally()) {
-            assert toReport.peek() != null;
-            toReport.peek().add(tree);
+            handleTryStatement((TryStatementTree) tree);
+        } else if (tree.is(Tree.Kind.NEW_CLASS)) {
+            handleNewClass((NewClassTree) tree);
         }
     }
 
     @Override
-    public void leaveNode(Tree tree) {
+    public void leaveNode(@Nonnull Tree tree) {
         if (tree.is(Tree.Kind.TRY_STATEMENT)) {
-            List<Tree> secondaryTrees = toReport.pop();
-            if (!secondaryTrees.isEmpty()) {
-                reportIssue(tree, MESSAGE_RULE);
+            leaveTryStatement();
+        }
+    }
+
+    /**
+     * Handle entering a try statement by pushing it onto the stack
+     */
+    private void handleTryStatement(@Nonnull TryStatementTree tryStatement) {
+        tryStack.push(new TryStatementContext(tryStatement));
+    }
+
+    /**
+     * Handle leaving a try statement by popping it from the stack and reporting issues if needed
+     */
+    private void leaveTryStatement() {
+        if (!tryStack.isEmpty()) {
+            TryStatementContext context = tryStack.pop();
+            if (!context.autoCloseableInstances.isEmpty()) {
+                reportIssue(context.tryStatement, MESSAGE_RULE);
             }
         }
     }
 
-    private boolean withinStandardTryWithFinally() {
-        if (withinTry.isEmpty() || !withinTry.peek().resourceList().isEmpty()) return false;
-        assert withinTry.peek() != null;
-        return withinTry.peek().finallyBlock() != null;
+    /**
+     * Handle new class instantiation to detect AutoCloseable objects
+     * that are created inside a try-finally block (without try-with-resources)
+     */
+    private void handleNewClass(@Nonnull NewClassTree newClass) {
+        // Check if the new instance is an AutoCloseable
+        if (!newClass.symbolType().isSubtypeOf(JAVA_LANG_AUTOCLOSEABLE)) {
+            return;
+        }
+
+        // Check if we are inside a non-compliant try statement
+        if (isInNonCompliantTry()) {
+            TryStatementContext context = tryStack.peek();
+            if (context != null) {
+                context.autoCloseableInstances.add(newClass);
+            }
+        }
     }
 
-    public boolean isCompatibleWithJavaVersion(JavaVersion version) {
-        return version.isJava7Compatible();
+    /**
+     * Check if we are currently inside a try statement that:
+     * - Does NOT use try-with-resources (no resource list)
+     * - Has a finally block (indicating manual resource management)
+     *
+     * @return true if inside a non-compliant try statement
+     */
+    private boolean isInNonCompliantTry() {
+        if (tryStack.isEmpty()) {
+            return false;
+        }
+
+        TryStatementTree currentTry = tryStack.peek().tryStatement;
+
+        // If try-with-resources is already used, it's compliant
+        if (!currentTry.resourceList().isEmpty()) {
+            return false;
+        }
+
+        // If there's a finally block, it suggests manual resource management
+        return currentTry.finallyBlock() != null;
+    }
+
+    /**
+     * Context class to track information about a try statement during AST traversal
+     */
+    private static class TryStatementContext {
+        final TryStatementTree tryStatement;
+        final List<Tree> autoCloseableInstances;
+
+        TryStatementContext(@Nonnull TryStatementTree tryStatement) {
+            this.tryStatement = tryStatement;
+            this.autoCloseableInstances = new ArrayList<>();
+        }
     }
 }
